<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:paddingTop="@dimen/toolbarPaddingTop"
        android:background="@color/primary_red"
        app:titleTextColor="@color/primary_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="@string/title_home"/>
    </android.support.v7.widget.Toolbar>

    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="160dp" />

    <com.stx.xmarqueeview.XMarqueeView
        android:id="@+id/billboard"
        android:layout_width="match_parent"
        app:isSingleLine="true"
        app:isSetAnimDuration="true"
        android:layout_height="25dp"
        />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/reserve_btn"
                android:background="#ffffff"
                android:drawableTop="@mipmap/icon_reserve_128"
                android:text="@string/reserve_btn"
                android:paddingTop="@dimen/icon_padding"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/write_btn"
                android:background="#ffffff"
                android:drawableTop="@mipmap/icon_write_128"
                android:text="@string/write_btn"
                android:paddingTop="@dimen/icon_padding"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/schedule_btn"
                android:background="#ffffff"
                android:drawableTop="@mipmap/icon_schedule_128"
                android:text="@string/schedule_btn"
                android:paddingTop="@dimen/icon_padding"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/scan_btn"
                android:background="#ffffff"
                android:paddingTop="@dimen/icon_padding"
                android:drawableTop="@mipmap/icon_qr_128"
                android:text="@string/scanQrcode"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/position_btn"
                android:background="#ffffff"
                android:paddingTop="@dimen/icon_padding"
                android:drawableTop="@mipmap/icon_position_128"
                android:text="@string/position_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/record_btn"
                android:background="#ffffff"
                android:paddingTop="@dimen/icon_padding"
                android:drawableTop="@mipmap/icon_record_128"
                android:text="@string/record_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/navigate_btn"
                android:background="#ffffff"
                android:paddingTop="@dimen/icon_padding"
                android:drawableTop="@mipmap/icon_navigate_128"
                android:text="@string/navigate_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/map_btn"
                android:background="#ffffff"
                android:paddingTop="@dimen/icon_padding"
                android:drawableTop="@mipmap/icon_map_128"
                android:text="@string/map_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/message_btn"
                android:background="#ffffff"
                android:paddingTop="@dimen/icon_padding"
                android:drawableTop="@mipmap/icon_message_128"
                android:text="@string/message_btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
