<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        style="@style/toobar_base"
        android:layout_width="match_parent"
        app:titleTextColor="@color/primary_white"
        app:navigationIcon="@mipmap/icon_back_128">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/primary_white"
            android:textSize="20sp"
            android:text="@string/register"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="@dimen/largePadding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/icon_username_128"/>
            <com.sjtubus.widget.ClearEditText
                android:id="@+id/username_edit"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/icon_telephone_128"/>
            <com.sjtubus.widget.ClearEditText
                android:id="@+id/phone_edit"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/icon_lock_128"/>
            <com.sjtubus.widget.ClearEditText
                android:id="@+id/pwd_edit"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_detail"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/icon_lockconfirm_128"/>
            <com.sjtubus.widget.ClearEditText
                android:id="@+id/pwd_confirm"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_code"
                android:gravity="bottom"
                android:textColor="@color/primary_red"
                android:padding="@dimen/basePadding"
                android:paddingRight="5dp"
                android:layout_gravity="bottom"
                android:textSize="@dimen/middleText"/>
            <com.sjtubus.widget.ClearEditText
                android:id="@+id/verify_edit"
                style="@style/editText_base"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_identify"
                android:inputType="textPassword"
                />
            <Button
                android:id="@+id/verify_btn"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/button_shape"
                android:padding="5dp"
                android:text="@string/verify"
                android:textColor="@color/primary_red"
                android:textSize="@dimen/smallText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/largePadding" >
        <CheckBox
            android:id="@+id/checkbtn_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/largerPadding"/>
        <TextView
            android:id="@+id/txt_protocol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/basicPaddingSize"
            android:textColor="@color/primary_red"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        style="@style/bigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/primary_red"
        android:text="确认并注册" />

</LinearLayout>