<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/shallow_gray">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/shallow_gray"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_line"
        style="@style/toobar_base"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        app:titleTextColor="@color/primary_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/primary_white"
            android:textSize="20sp"
            android:text="@string/title_personinfo"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shallow_white"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/smallPadding">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/icon_username_128"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/username"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/person_username"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/screenPadding"
            android:textSize="@dimen/middlesmallText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shallow_white"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/smallPadding">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/icon_teacher_128"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/role"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/person_isteacher"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/screenPadding"
            android:textSize="@dimen/middlesmallText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/person_phone_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shallow_white"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/smallPadding">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/icon_telephone_128"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/phone"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/person_phone"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/screenPadding"
            android:textSize="@dimen/middlesmallText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shallow_white"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/smallPadding">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/icon_credit_128"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/credit"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/person_credit"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/screenPadding"
            android:textSize="@dimen/middlesmallText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/person_studentnum_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shallow_white"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/smallPadding">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/icon_studentnum_128"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/studentnum"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/person_studentnum"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/screenPadding"
            android:textSize="@dimen/middlesmallText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/person_realname_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shallow_white"
        android:layout_marginBottom="2dp"
        android:padding="@dimen/smallPadding">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/icon_realname_128"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/realname"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/person_realname"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/screenPadding"
            android:textSize="@dimen/middlesmallText" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        style="@style/bigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"
        android:background="@color/primary_red"
        android:text="@string/logout"
        />
</LinearLayout>
</ScrollView>